--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "websockets-socket.io",
   "version": "1.0.0",
   "engines": {
-    "node": "12.x"
+    "node": "14.16.1"
   },
   "description": "",
   "main": "index.js",
@@ -15,6 +15,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^4.1.2"
   }
 }
